[tool.poetry]
name = "pyvfs"
version = "0.1.0"
description = "Python pluggable virtual filesystems library"
authors = ["Matheus Xavier <mxavier+git@rootcert.net>"]
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
importanize = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
